k8s/apps/default/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      hostname: radarr
      volumes:
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr-develop:5.1.3.8246
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "512m"
              memory: "2048Mi"
            limits:
              memory: "2048Mi"
          ports:
            - containerPort: 7878
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
