k8s/apps/default/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  serviceName: radarr
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteONce
        storageClassName: ceph-block
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: radarr
    spec:
      hostname: radarr
      volumes:
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr-develop:rolling@sha256:f62b8d569fafe0068755c1e080c17646fba7829c19c860a34679e7a7a1178227
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: "512m"
              memory: "2048Mi"
            limits:
              memory: "2048Mi"
          ports:
            - containerPort: 7878
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
